k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyschool-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyschool
  template:
    metadata:
      labels:
        app: easyschool
    spec:
      containers:
        - name: easyschool-app
          image: enitos/easy-school:v1
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: easyschool-config
