k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyschool-service
spec:
  type: NodePort
  selector:
    app: easyschool
  ports:
  - port: 3000
