k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyschool-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: easyschool-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easyschool-app
            port:
              number: 3000
